@@ -12,6 +12,8 @@ Performance improvements
 Examples and applications
 -------------------------
 
+- Take out STP and PolySCIP applications
+
 Interface changes
 -----------------
 
@@ -62,6 +64,8 @@ Fixed bugs
 
 Miscellaneous
 -------------
+
+- Changed license to Apache 2.0, see https://www.apache.org/licenses/LICENSE-2.0.
 
 Known bugs
 ----------
